Bugs Fixed in Bid Service